--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,11 @@
 
               "node_modules/angular-calendar/css/angular-calendar.css",
 
-              "node_modules/ngx-spinner/animations/ball-clip-rotate.css"
+              "node_modules/ngx-spinner/animations/ball-clip-rotate.css",
+
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/luna-pink/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
 
             ],
             "scripts": ["node_modules/jquery/dist/jquery.js",
