--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/core": "^16.0.1",
     "@angular/forms": "^16.0.1",
     "@angular/material": "^16.0.1",
+    "@angular/material-moment-adapter": "^17.0.4",
     "@angular/platform-browser": "^16.0.1",
     "@angular/platform-browser-dynamic": "^16.0.1",
     "@angular/router": "^16.0.1",
+    "@balkangraph/orgchart.js": "^8.13.22",
     "@kolkov/angular-editor": "^2.1.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
@@ -39,11 +41,15 @@
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
     "material-icons": "^1.13.12",
+    "moment": "^2.30.1",
     "ng-apexcharts": "1.7.6",
+    "ngx-mat-select-search": "^7.0.5",
     "ngx-pagination": "^6.0.1",
     "ngx-permissions": "^13.0.1",
     "ngx-scrollbar": "^11.0.0",
     "ngx-spinner": "^14.0.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
     "sass": "^1.57.1",
     "sweetalert2": "^11.9.0",
