--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-datatables": "^16.0.0",
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.35.3",
+    "d3-org-chart": "^3.1.1",
     "datatables.net": "^1.13.7",
     "datatables.net-bs4": "^1.13.7",
     "datatables.net-buttons": "^2.4.2",
@@ -60,6 +61,7 @@
     "@angular-devkit/build-angular": "^16.0.1",
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.1",
+    "@types/d3-org-chart": "^3.1.2",
     "@types/datatables.net": "^1.10.27",
     "@types/date-fns": "^2.6.0",
     "@types/jasmine": "~4.3.0",
