--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^16.0.1",
     "@balkangraph/orgchart.js": "^8.13.22",
     "@kolkov/angular-editor": "^2.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
+    "@ngx-material-keyboard/core": "^0.1.1",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "angular-calendar": "^0.31.0",
@@ -40,10 +42,15 @@
     "devextreme": "23.1.2-beta",
     "devextreme-angular": "23.1.2-beta",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "jszip": "^3.10.1",
+    "jwt-decode": "^4.0.0",
+    "mat-timepicker": "^5.1.8",
     "material-icons": "^1.13.12",
     "moment": "^2.30.1",
     "ng-apexcharts": "1.7.6",
+    "@ng-select/ng-select": "^8.1.1",
     "ngx-mat-select-search": "^7.0.5",
     "ngx-pagination": "^6.0.1",
     "ngx-permissions": "^13.0.1",
@@ -64,6 +71,7 @@
     "@types/d3-org-chart": "^3.1.2",
     "@types/datatables.net": "^1.10.27",
     "@types/date-fns": "^2.6.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.27",
     "jasmine-core": "~4.5.0",
